feat(node): implement node logic
All tests passed