@@ -43,6 +43,9 @@
         <version>3.12.1</version>
         <configuration>
           <release>21</release>
+          <compilerArgs>
+            <arg>--enable-preview</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
     </plugins>
